--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
+    "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
-    "react-dom": "^19.2.1",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
