--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.50.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
     "next": "^16.1.0",
