--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.45.0",
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.50.0",
@@ -52,6 +52,7 @@
     "lucide-react": "^0.556.0",
     "next": "^16.1.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
@@ -64,7 +65,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.13"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
