--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
     "@hookform/resolvers": "^5.2.2",
+    "@imagekit/next": "^2.1.4",
     "@inngest/agent-kit": "^0.13.2",
+    "@langchain/community": "^1.1.11",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,6 +49,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.45.0",
     "embla-carousel-react": "^8.6.0",
+    "imagekit": "^6.0.0",
     "inngest": "^3.50.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
